<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>launch</name>
  <version>0.0.1</version>
  <description>ros action custom action interface</description>
  <maintainer email="skanda.naglapur-ramamurthy@man.eu">Skanda Naglapur Ramamurthy</maintainer>
  <license>MIT</license>

  <depend>state_machine</depend>

  <buildtool_depend>state_machine</buildtool_depend>
  <buildtool_depend>ament_cmake</buildtool_depend>



  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
