<?xml version="1.0"?>
<package format="2">
  <name>test_pkg</name>
  <version>0.0.1</version>
  <description>This package contains state machine implementation</description>

  <maintainer email="skanda.naglapur-ramamurthy@man.eu">Skanda Naglapur Ramamurthy</maintainer>
  <license>Apache License 2.0</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>action_interface</exec_depend>

  <!-- These test dependencies are optional
  Their purpose is to make sure that the code passes the linters -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
